compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__type_vars_must_be_declared.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "record A<a> { A }\ntype B = a"
---
----- SOURCE CODE
record A<a> { A }
type B = a

----- ERROR
error: Unknown type
  ┌─ /src/one/two.rakun:2:10
  │
2 │ type B = a
  │          ^ Did you mean `A`?

The type `a` is not defined or imported in this module.
