compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_accessed_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn(a) { a.field }"
---
----- SOURCE CODE
fn(a) { a.field }

----- ERROR
error: Unknown type for record access
  ┌─ /src/one/two.rakun:1:9
  │
1 │ fn(a) { a.field }
  │         ^ I don't know what type this is

In order to access a record field we need to know what type it is, but I
can't tell the type here. Try adding type annotations to your function and
try again.
