compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_field.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn(a: a) { a.field }"
---
error: Unknown record field
  ┌─ /src/one/two.rakun:1:13
  │
1 │ fn(a: a) { a.field }
  │             ^^^^^^ This field does not exist

The value being accessed has this type:

    a

It does not have any fields.
