compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_field_update2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1622
expression: "\n pub record Person {\n   Person(name: String, age: Int, size: Int)\n }\n pub fn update_person(person: Person) {\n   Person(..person, size: 66, one: 5, age: 3)\n }"
---
----- SOURCE CODE

 pub record Person {
   Person(name: String, age: Int, size: Int)
 }
 pub fn update_person(person: Person) {
   Person(..person, size: 66, one: 5, age: 3)
 }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.rakun:6:31
  │
6 │    Person(..person, size: 66, one: 5, age: 3)
  │                               ^^^^^^ This field does not exist

The value being accessed has this type:

    Person

It has these accessible fields:

    .age
    .name
    .size
