compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_imported_module_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport one/two\n\npub fn main(_x: two.Thing) {\n  Nil\n}\n"
---
----- SOURCE CODE
-- one/two.rakun


-- main.rakun

import one/two

pub fn main(_x: two.Thing) {
  Nil
}


----- ERROR
error: Unknown module type
  ┌─ /src/one/two.rakun:4:17
  │
4 │ pub fn main(_x: two.Thing) {
  │                 ^^^^^^^^^

The module `one/two` does not have a `Thing` type.
